# buan-temp

./: .gitignore  CMakeLists.txt  latency_report.csv
dashboard/: index.html
include/buan/: client.hpp
include/buan/benchmarks/: audit_flusher.hpp  audit_logger.hpp
include/buan/core/: arena_allocator.hpp  hugepage_manager.hpp  market_state_arena.hpp  ring_buffer.hpp  symbol_index.hpp  types.hpp
include/buan/monads/: engine.hpp
include/buan/network/: binance_parser.hpp  driver_interface.hpp  pcap_portal.hpp  portal_interface.hpp  protocol_parser.hpp  sbe_order_builder.hpp  xdp_portal.hpp
include/buan/risk/: risk_gate.hpp
include/buan/util/: affinity_helper.hpp  atomic_sequence.hpp  market_stimulator.hpp  rdtsc_clock.hpp  vol_surface.hpp
scripts/: activate_fabric.sh  ai_bridge_demo.py  alpha_vision_server.py  analyze_latency.py  apply_grub_isolation.sh  build.sh  production_monitor.py  setup_env.sh  setup_veth.sh  shield_interrupts.sh  steer_traffic.sh  torch_atomic_bridge.py  verify_iron.sh
src/: main.cpp
src/api/: python_bindings.cpp
src/benchmarks/: hela_audit_suite.cpp
src/core/: arena_allocator.cpp
src/math/: feature_factory.cpp
src/monads/: datapath_composition.cpp
src/network/: binance_parser.cpp  pcap_portal.cpp  protocol_parser.cpp  xdp_kern.c  xdp_portal.cpp
